 2010-11-02 17:05  asfernandes 
   M src/dsql/DdlNodes.epp
   M src/dsql/DsqlCompilerScratch.cpp
   M src/dsql/DsqlCompilerScratch.h
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/Nodes.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/Visitors.h
   M src/dsql/gen.cpp
   M src/dsql/make.cpp
   M src/dsql/make_proto.h
   M src/dsql/node.h
   M src/dsql/pass1.cpp
   M src/jrd/blb.cpp
   M src/jrd/cmp.cpp
   M src/jrd/evl.cpp
   M src/jrd/exe.cpp
   M src/jrd/exe.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/par.cpp
   M src/jrd/trace/TraceObjects.cpp
   M src/misc/blrtable.cpp
Refactor variables

 2010-11-02 11:30  dimitr 
   M src/jrd/Database.h
Cleanup.

 2010-11-02 09:35  dimitr 
   M src/dsql/dsql.cpp
Fixed SET TRANSACTION statement.

 2010-11-01 23:57  asfernandes 
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/Nodes.h
   M src/dsql/Visitors.h
   M src/dsql/gen.cpp
   M src/dsql/make.cpp
   M src/dsql/node.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/jrd/Optimizer.cpp
   M src/jrd/cmp.cpp
   M src/jrd/evl.cpp
   M src/jrd/exe.h
   M src/jrd/nod.h
   M src/jrd/opt.cpp
   M src/jrd/par.cpp
   M src/misc/blrtable.cpp
1) Refactor CAST.
2) Fixed CORE-3204 - Constraint violation error of CAST is not raised inside views

 2010-11-01 19:32  dimitr 
   M src/jrd/recsrc/RecordSource.h
   M src/jrd/recsrc/RecursiveStream.cpp
Fixed CORE-3208: Significant memory leaks with recursive queries.

 2010-11-01 15:09  asfernandes 
   M src/jrd/opt.cpp
Correction

 2010-11-01 13:45  asfernandes 
   M src/dsql/pass1.cpp
Back the generic usage of nod_desc by a call to MAKE_desc

 2010-11-01 11:55  asfernandes 
   M src/dsql/ExprNodes.cpp
Correction

 2010-11-01 10:46  alexpeshkoff 
   M src/dsql/dsql.cpp
Fixed segfault in dsql_prepare

 2010-11-01 00:42  asfernandes 
   M src/dsql/AggNodes.cpp
   M src/dsql/AggNodes.h
   M src/dsql/DdlNodes.epp
   M src/dsql/ExprNodes.cpp
   M src/dsql/ExprNodes.h
   M src/dsql/Nodes.h